[gd_scene load_steps=7 format=2]

[ext_resource path="res://Canvas/Questions/images/success_logo.png" type="Texture" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Canvas/Questions/Quiz.gd" type="Script" id=3]
[ext_resource path="res://Canvas/Questions/images/dark_grey_background.jpeg" type="Texture" id=4]
[ext_resource path="res://Canvas/Questions/images/sad_face_resized.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 2 )

[node name="Background" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 80.0
margin_right = 512.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Which state is famous 
for Hollywood?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -20.0
margin_right = 205.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "California"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = 70.0
margin_right = 205.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "New York"

[node name="Option3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = 160.0
margin_right = 205.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Florida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectAnswerBackground" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 270.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectAnswer" type="Label" parent="CorrectAnswerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -387.5
margin_top = 89.0
margin_right = 389.5
margin_bottom = 248.0
custom_fonts/font = SubResource( 1 )
text = "Correct Answer! 
Pick your reward below"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetReward" type="Button" parent="CorrectAnswerBackground"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -236.0
margin_top = 150.0
margin_right = 236.0
custom_fonts/font = SubResource( 1 )
text = "Get 10 Points"

[node name="FalseAnswerBackground" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 256.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FalseAnswer" type="Label" parent="FalseAnswerBackground"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -430.5
margin_top = 10.0
margin_right = 430.5
custom_fonts/font = SubResource( 1 )
text = "Sorry, that was incorrect! "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="FalseAnswerBackground"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -141.0
margin_top = 150.0
margin_right = 141.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_Option3_pressed"]
[connection signal="pressed" from="CorrectAnswerBackground/GetReward" to="." method="_on_GetReward_pressed"]
[connection signal="pressed" from="FalseAnswerBackground/Resume" to="." method="_on_Resume_pressed"]
